changed sms-service, minor edits

--- a/src/template/sendReferralLinkEmailToNotRegisteredUser.pug
+++ b/src/template/sendReferralLinkEmailToNotRegisteredUser.pug
@@ -8,7 +8,7 @@
 	<div style="line-height: 1.5; font-size: 14px; font-family: 'Roboto', sans-serif; background-color: #F0F0F0; border-radius: 10px; padding: 15px; color: #5F5B5D;">
 		<div>Здравствуйте, <span style="font-weight: 500; font-size: 16px;">#{email}</span></div>
 		<div>#{firstName} #{lastName} приглашает вас присоединиться к платформе Kontragent. Чтобы принять приглашение перейдите по ссылке ниже.</div>
-		<div>Ваша реферальная ссылка: <a href="https://kontragent-client-demo.herokuapp.com/auth/referal/#{referalId}" >Присоединиться</a>
+		<div>Ваша реферальная ссылка: <a href="http://контрагент.рф/auth/referal/#{referalId}" >Присоединиться</a>
 		</div>
 	</div>
 </body>
