--- a/src/template/userVerificationCodeEmail.pug
+++ b/src/template/userVerificationCodeEmail.pug
@@ -6,8 +6,7 @@
 </head>
 <body style="margin: 20px;">
 	<div style="line-height: 1.5; font-size: 14px; font-family: 'Roboto', sans-serif; background-color: #F0F0F0; border-radius: 10px; padding: 15px; color: #5F5B5D;">
-		<div>Здравствуйте, <span style="font-weight: 500; font-size: 16px;">#{email}</span></div>
-		<div>Ваш код для подтверждения: #{code} на платформе <span style="font-weight: 500; font-size: 16px;" >Kontragent</span>
+		<div>Ваш код для подтверждения на платформе <span style="font-weight: 500; font-size: 16px;" >КОНТРАГЕНТ.РФ: #{code}</span>
 		</div>
 	</div>
 </body>
