edited .pug, added payment types

--- a/src/template/sendReferralLinkEmailToRegisteredUser.pug
+++ b/src/template/sendReferralLinkEmailToRegisteredUser.pug
@@ -6,7 +6,11 @@
 </head>
 <body style="margin: 20px;">
 	<div style="line-height: 1.5; font-size: 14px; font-family: 'Roboto', sans-serif; background-color: #F0F0F0; border-radius: 10px; padding: 15px; color: #5F5B5D;">
-		<div>Здравствуйте! #{firstName} #{lastName} приглашает Вас присоединиться к своей реферальной системе <span style="font-weight: 500; font-size: 16px;">на КОНТРАГЕНТ.РФ.</span> Чтобы принять приглашение перейдите по ссылке ниже. Ваша реферальная ссылка: <a href="http://контрагент.рф/account/referal/#{referalId}">Присоединиться</a></div>
+		<div>
+			<span>Здравствуйте! #{firstName} #{lastName} приглашает Вас присоединиться к своей реферальной системе на контрагент.рф</span> 
+		</div>
+		<div><span>Чтобы принять приглашение перейдите по ссылке ниже</span></div>
+		<div><span> Ваша реферальная ссылка: <a href="https://контрагент.рф/account/referal/#{referalId}">Присоединиться</a></span></div>
 	</div>
 </body>
 </html>
