--- a/src/template/sendInviteToSeveralEmails.pug
+++ b/src/template/sendInviteToSeveralEmails.pug
@@ -6,10 +6,11 @@
 </head>
 <body style="margin: 20px;">
 	<div style="line-height: 1.5; font-size: 14px; font-family: 'Roboto', sans-serif; background-color: #F0F0F0; border-radius: 10px; padding: 15px; color: #5F5B5D;">
-		<div>Здравствуйте, <span style="font-weight: 500; font-size: 16px;">#{email}</span></div>
-		<div>Приглашаем вас присоединиться к платформе Kontragent. Чтобы принять приглашение перейдите по ссылке ниже.</div>
-		<div><a href="https://kontragent-client-demo.herokuapp.com/" >Присоединиться</a>
+		<div>
+			<span>Приглашаем Вас присоединиться к платформе контрагент.рф</span> 
+			<span>Чтобы принять приглашение перейдите по ссылке ниже</span>
 		</div>
+		<div><a href="https://контрагент.рф/invite" >Присоединиться</a></div>
 	</div>
 </body>
 </html>
