--- a/src/template/sendInviteToSeveralEmails.pug
+++ b/src/template/sendInviteToSeveralEmails.pug
@@ -8,8 +8,8 @@
 	<div style="line-height: 1.5; font-size: 14px; font-family: 'Roboto', sans-serif; background-color: #F0F0F0; border-radius: 10px; padding: 15px; color: #5F5B5D;">
 		<div>
 			<span>Приглашаем Вас присоединиться к платформе контрагент.рф</span> 
-			<span>Чтобы принять приглашение перейдите по ссылке ниже</span>
 		</div>
+		<div><span>Чтобы принять приглашение перейдите по ссылке ниже</span></div>
 		<div><a href="https://контрагент.рф/invite" >Присоединиться</a></div>
 	</div>
 </body>
