--- a/src/template/send-revision-kontragent.pug
+++ b/src/template/send-revision-kontragent.pug
@@ -75,5 +75,7 @@ html
 
     #divider
 
-    a(href=`${url}`)
-      h3 Файл проверки PDF 
+    h2(style="font-size: 27px") Создана проверка контрагента №#{ id }
+
+    a(href=`https://контрагент.рф/admin/revision/kontragent/${id}`)
+      h3 Перейти на проверку контрагента
